Utworzono za pomocą Colab

--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+pzQs9PDmCJSFdBK36hI5",
+      "authorship_tag": "ABX9TyM/JnKGWbT1g6G4499M3ulm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "v8Vem2P8C_ai"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
         "id": "L_RurEHaDQSl",
         "outputId": "acfc6fdb-d229-4302-d86d-6006f3a7f01c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +127,7 @@
         "id": "KTmW4IUvEs83",
         "outputId": "fa0ca337-0aad-41ed-afbb-6d107b439a2f"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -197,7 +197,7 @@
         "id": "OPk4otz9OIZI",
         "outputId": "a460f9fc-2838-4d0b-e737-8b0208b9c769"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -212,16 +212,26 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "\n",
-        ""
+        "Odpowiedź nr 1:\n",
+        "Ciężko jednoznacznie odpowiedzieć na to pytanie, ponieważ zbiór danych ma tylko 3 cechy. Z jednej strony widzimy na wykresach powyżej,\n",
+        "że PCA po części zawarło informacje z pozostałych wykresów. Jednak dane nie zostały rozdzielone w sposób ciekawy do analizy.\n",
+        "O wiele lepiej widać podział na klasy obiektów na wykresie x vs. y albo na x vs. z. Podsumowując lepsze oddzielenie danych widać na pozostałych wykresach,\n",
+        "więc PCA nie polepszył separacji danych."
       ],
       "metadata": {
-        "id": "PoEjfG6iGbm7"
-      },
-      "execution_count": 71,
-      "outputs": []
+        "id": "d4gVafChiXj3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Odpowiedź nr 2: PCA polega na znajdowaniu kierunków w przestrzeni cech, w których wariancja jest maksymalna. Jeśli cechy nie zostaną przeskalowane, wariancja w jednej z nich może zdominować wariancję cechy o małych wartościach, co zaciemnia faktyczne relacje. Jeśli więc zmienne mają różne skale, to te o większym zakresie wartości będą w znacznym stopniu wpływać na wyznaczenie składowych głównych, co nie odzwierciedli faktycznych zależności między danymi\n"
+      ],
+      "metadata": {
+        "id": "K5wiA6FhidDu"
+      }
     }
   ]
 }
