Utworzono za pomocą Colab

--- a/prd11.ipynb
+++ b/prd11.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhy0RGLhs0HB1sZFhcd58y",
+      "authorship_tag": "ABX9TyPl+NuoI1FBYndrU6OhFReX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "[***Załącznik z ilustracją działania***](IMG_1799.pdf)"
+      ],
+      "metadata": {
+        "id": "3AfsivAX44qT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#1. Co to jest transponowana konwolucja ?\n",
         "\n",
         "Konwolucja transponowana to operacja, której celem jest powiększenie wymiarów mapy cech. Zamiast zagęszczać obraz, jak w zwykłej konwolucji, rozprowadza ona każdą wartość wejściową na większy obszar wyjściowy, dzięki czemu liczba pikseli rośnie.\n",
@@ -50,16 +59,16 @@
         "\n",
         "#3. Jak następuje powiększanie mapy cech?\n",
         "\n",
-        "Rozszerzanie przebiega tak: każdy składnik tensora jest mnożony przez filtr, a otrzymane wartości trafiają w ściśle wyznaczone miejsca wyjścia. Przechodząc po następnych wartościach , te które nachodzą na siebie na wyjściu są dodawane.\n",
+        "Rozszerzanie przebiega tak: filtr jest mnożony przez każdy składnik tensora, a otrzymane wartości trafiają w ściśle wyznaczone miejsca wyjścia. Przechodząc po następnych wartościach , te które nachodzą na siebie na wyjściu są dodawane.\n",
         "\n",
         "W zależności od filtra wartości są mnożone przez inne liczby. Stride w tej operacji reguluje nam w które miejsce następna wartość zostanie dodana.\n",
         "\n",
         "#4. Co to jest padding, stride i rozmiar filtra?\n",
         "\n",
         "\n",
-        "Padding - operacja, która dodaje zera wokół wejściowego tensora, która reguluję rozmiar wyjścia  \n",
+        "Padding - operacja, która dodaje zera wokół wejściowego tensora, która reguluję rozmiar wyjścia. W przypadku transponowanej konwolucji padding, poniekąd zmienia która część liczb(powstałych przez przemnożenie filtra przez wartości z tensora wejściowego) zostanie naniesiona na wyjście. Szczegółowy sposób działania został przedstawiony na załączonym obrazku.\n",
         "\n",
-        "Stride - liczba, która mówi nam o ile filtr przesunie się w każdym kroku. Stride powiększa nam output. W zamieszczonej grafice dokładnie pokaże jak działa.\n",
+        "Stride - liczba, która mówi nam o ile filtr przesunie się w każdym kroku. Stride w konwolucji transponowanej powiększa nam output. W zamieszczonej grafice dokładnie pokaże jak działa.\n",
         "\n",
         "Rozmiar filtra - rozmiar, wymiar filtra, który przechodzi po kolejnych elementach tensora. W zależności od tej liczby:\n",
         "\n",
